# passmanpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Choosing Options.md  LICENSE  README.md  SECURITY.md  build.sh  header.md  header.txt  install.sh  main.cpp  passman.pro  tips.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  high-severity.md
.github/workflows/: codeql-analysis.yml
share/: CMakeLists.txt  Makefile  cmake_install.cmake  passman++.desktop  passman++.xml
src/: CMakeLists.txt  Makefile  breeze.qrc  constants.h  constants.hpp  database.cpp  database.h  database.hpp  db.cpp  db.h  entry.cpp  entry.h  entry.hpp  entry_handler.cpp  entry_handler.h  field.cpp  field.h  field.hpp  file_handler.cpp  file_handler.h  generators.cpp  generators.h  main.cpp  manager.cpp  manager.h  passman.pro  passman_constants.hpp  pdpp_handler.cpp  pdpp_handler.h  security.cpp  security.h  sql.cpp  sql.h  string.cpp  string.h  stringutil.cpp  stringutil.h  util.hpp
src/actions/: password_generator_action.cpp  password_generator_action.h  password_generator_action.hpp  password_visible_action.cpp  password_visible_action.h  password_visible_action.hpp
src/gui/: base_widget.cpp  base_widget.hpp  config_dialog.cpp  config_dialog.h  config_dialog.hpp  config_widget.cpp  config_widget.hpp  database_edit_dialog.cpp  database_edit_dialog.h  database_main_widget.cpp  database_main_widget.hpp  database_window.cpp  database_window.h  database_window.hpp  entry_edit_dialog.cpp  entry_edit_dialog.h  entry_edit_dialog.hpp  entry_edit_widget.cpp  entry_edit_widget.hpp  mainwindow.cpp  mainwindow.hpp  password_dialog.cpp  password_dialog.h  password_dialog.hpp  password_generator_dialog.cpp  password_generator_dialog.hpp  password_widget.cpp  password_widget.hpp  random_password_dialog.cpp  random_password_dialog.h  random_password_dialog.hpp  welcome_dialog.cpp  welcome_dialog.h  welcome_dialog.hpp  welcome_widget.cpp  welcome_widget.hpp
src/handlers/: entry_handler.cpp  entry_handler.h  file_handler.cpp  file_handler.h
src/util/: data_stream.cpp  data_stream.h  data_stream.hpp  extra.cpp  extra.h  extra.hpp  generators.cpp  generators.h  kdf.cpp  kdf.hpp  manager.cpp  manager.h  sql.cpp  sql.h  sql.hpp  stringutil.cpp  stringutil.h  vector_union.cpp  vector_union.h  vector_union.hpp
